--- a/Metodologia de Sistemas l 2023/Java Avanzado/tienda_libros/tienda_libros/src/main/resources/application.properties
+++ b/Metodologia de Sistemas l 2023/Java Avanzado/tienda_libros/tienda_libros/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=tienda_libros
+# Conexion a la base de adtos
+spring.datasource.url=jdbc:mysql://localhost:3304/tienda_libros_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Crear la base de datos en caso  de ser necesario
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
