--- a/Laboratorio/ecommerce-PERN/server/package.json
+++ b/Laboratorio/ecommerce-PERN/server/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
